Update 'fboj06uhl-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-965655582e.c7mj.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:c547cb10fab4a220e900b5bf67c39fd75f700fbb@sha256:3a693ea5dd41b25d094f93a09bf77105f974c8d9ea859c4cdef33bf2db746874

--- a/components/fboj06uhl-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/fboj06uhl-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fboj06uhl-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-965655582e.c7mj.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:c547cb10fab4a220e900b5bf67c39fd75f700fbb@sha256:3a693ea5dd41b25d094f93a09bf77105f974c8d9ea859c4cdef33bf2db746874
+          name: container-image
